<resources>
    <string name="app_name">CST2335_lab1</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="RadioButton">RadioButton</string>
    <string name="CheckBox">CheckBox</string>
    <string name="switch1">What does this do?</string>
    <string name="dialog_message">Do you want to finish the activity?</string>
    <string name="dialog_title">TITLE</string>
    <string name="OK">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="text1">Switch is On</string>
    <string name="text2">Switch is Off</string>
    <string name="text3">Here is my response</string>
    <string name="chat">Start Chat</string>
    <string name="send">SEND</string>
    <string name="insert">INSERT</string>
    <string name="weatherforecast">weatherforecast</string>
    <string name="currentTemperature">current Temperature</string>
    <string name="minTemperature">Minimum Temperature</string>
    <string name="maxTemperature">Maximum Temperature</string>
    <string name="deleteMessageButton">DELETE THIS MESSAGE</string>
    <string name="chatIDTextView">ID = </string>
    <string name="chatMessageTextView">MessageHere</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="actionOne">Choice 1</string>
    <string name="actionTwo">Choice 2</string>
    <string name="actionThree">Choice 3</string>
    <string name="about">About</string>
    <string name="newmessage">New Message</string>
</resources>
