<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_one"
        android:title="@string/actionOne"
        android:icon="@drawable/home"
        android:orderInCategory="1"
        app:showAsAction="always" />

    <item android:id="@+id/action_two"
        android:title="@string/actionTwo"
        android:icon="@drawable/beeswax2"
        android:orderInCategory="2"
        app:showAsAction="always" />

    <item android:id="@+id/action_three"
        android:title="@string/actionThree"
        android:icon="@drawable/address"
        android:orderInCategory="3"
        app:showAsAction="always" />

    <item android:id="@+id/about"
        android:title="@string/about"
        app:showAsAction="never" />

</menu>