<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cynthiasheng.cst2335_lab1.StartActivity">
    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_message"
        android:layout_centerInParent="true" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ButtonText"
        tools:layout_editor_absoluteX="135dp"
        tools:layout_editor_absoluteY="288dp"
        android:layout_below="@+id/welcome"
        android:layout_centerInParent="true"/>

    <Button
        android:id="@+id/chatbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chat"
        tools:layout_editor_absoluteX="137dp"
        tools:layout_editor_absoluteY="386dp"
        android:layout_below="@+id/button"
        android:layout_centerInParent="true"/>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
