<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cynthiasheng.cst2335_lab1.WeatherForecast">
    <ImageView
        android:id="@+id/temperatureImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/currentTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/temperatureImageView"
        android:fontFamily="sans-serif-medium"
        android:text="@string/currentTemperature"
        android:textColorLink="@android:color/holo_blue_light" />

    <TextView
        android:id="@+id/minTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/currentTemperature"
        android:fontFamily="sans-serif-medium"
        android:text="@string/minTemperature"
        android:textColor="#1d2adb" />

    <TextView
        android:id="@+id/maxTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/minTemperature"
        android:fontFamily="sans-serif-medium"
        android:text="@string/maxTemperature"
        android:textColor="@android:color/holo_orange_dark" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/maxTemperature"
        android:visibility="invisible" />

</RelativeLayout >
